--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
   line-height: 1.2;
 }
 
+a.toc,
+a.toc:visited,
+a.toc:hover,
+a.toc:active {
+  color: #22d3ee !important;
+}
+
+
 .site-title .title-main {
   display: block;
   font-size: 1.6rem;
