--- a/index.html
+++ b/index.html
@@ -481,11 +481,11 @@ body{
             <ul style="margin-left: 20px;">
               <span class="toc" style="margin-left:6px;">
                 <li><strong>Starter templates:</strong><br>
-                  <a href="https://leeshawverisl.github.io/code2escape_project_template_basic/" id="starterLink"  target="_blank" rel="noopener">Basic Template</a>
+                  <a href="https://leeshawverisl.github.io/code2escape_project_template_basic/" id="starterLink"  target="_blank" rel="noopener">Basic Template Example Page</a>
                   <ul>
                   <li><a href="https://github.com/LeeShawverISL/escape2code_project_template_plus/blob/main/index.html" id="starterLink"  target="_blank" rel="noopener">Raw Code</a></li>
                   </ul>
-                    <a href="https://leeshawverisl.github.io/escape2code_project_template_plus/" id="starterLink"  target="_blank" rel="noopener">Flashy Template</a>
+                    <a href="https://leeshawverisl.github.io/escape2code_project_template_plus/" id="starterLink"  target="_blank" rel="noopener">Flashy Template Example Page</a>
                   <ul>
                     <li><a href="https://github.com/LeeShawverISL/code2escape_project_template_basic/blob/main/index.html" id="starterLink"  target="_blank" rel="noopener">Raw Code</a></li>
                   </ul>     
