--- a/index.html
+++ b/index.html
@@ -682,7 +682,9 @@ Explore and analyze
     <li><strong>Usability / user experience requirements</strong><br>
       What should players be able to understand easily?<br>
       How should your instructions or feedback appear?<br>
-      <b>Teacher-provided <u>required</u> specification:</b> "The puzzle must be solvable in 60 seconds or less, excluding any time spent reading the instructions or thinking/planning before starting."
+      <span color: var(--ok)>
+        <b>Teacher-provided <u>required</u> specification:</b> "The puzzle must be solvable in 60 seconds or less, excluding any time spent reading the instructions or thinking/planning before starting."
+      </span>
     </li>
     <li><strong>Aesthetic requirements</strong><br>
       What style, visuals, or layout expectations do you already have?
