--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@ Explore and analyze
     <li><strong>Usability / user experience requirements</strong><br>
       What should players be able to understand easily?<br>
       How should your instructions or feedback appear?<br>
-      <span color: var(--ok)>
+      <span color: var(--err)>
         <b>Teacher-provided <u>required</u> specification:</b> "The puzzle must be solvable in 60 seconds or less, excluding any time spent reading the instructions or thinking/planning before starting."
       </span>
     </li>
