Update due dates in index.html

--- a/index.html
+++ b/index.html
@@ -974,14 +974,14 @@ Explore and analyze
   var dueDates = {
     A3date: 'December 05',
     A4date: 'December 12',
-    B1date: '??',
-    B2date: '??',
-    B3date: '??',
-    C1date: '??',
-    C2date: '??',
-    C3date: '??',
-    C4date: '??',
-    finalDueDate: 'Sunday, March 22, 21:00'
+    B1date: 'January 13',
+    B2date: 'January 19',
+    B3date: 'January 23',
+    C1date: 'January 27',
+    C2date: 'March 22',
+    C3date: 'March 22',
+    C4date: 'March 27',
+    finalDueDate: 'Sunday, March 29, 21:00'
   };
 
   function applyDueDates(){
