Add suggested due dates to design briefs

--- a/index.html
+++ b/index.html
@@ -588,6 +588,7 @@ Explore and analyze
   <hr>
 
   <h3>A4. Design Brief</h3>
+  <br>Suggested due date: <span data-date="A4date"></span></ul><br>
   <em>
     <p style="color:lemonchiffon;">A4: <b>develop a detailed</b> design brief, which <b>summarizes</b> the analysis of relevant research.</p>
   </em>
@@ -663,6 +664,7 @@ Explore and analyze
   <hr>
 
   <h3>B1. Develop Design Specifications</h3>
+  <br>Suggested due date: <span data-date="B1date"></span></ul><br>
   <em>
     <p style="color:lemonchiffon;">B1: <b>develop detailed</b> design specifications, which <b>explain</b> the success criteria for the design of a solution based on the analysis of the research</p>
   </em>
