--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@ Explore and analyze
   <hr>
 
   <h3>A4. Design Brief</h3>
-  <br>Suggested due date: <span data-date="A4date"></span></ul><br>
+  Suggested due date: <span data-date="A4date"></span></ul><br>
   <em>
     <p style="color:lemonchiffon;">A4: <b>develop a detailed</b> design brief, which <b>summarizes</b> the analysis of relevant research.</p>
   </em>
@@ -664,7 +664,7 @@ Explore and analyze
   <hr>
 
   <h3>B1. Develop Design Specifications</h3>
-  <br>Suggested due date: <span data-date="B1date"></span></ul><br>
+  Suggested due date: <span data-date="B1date"></span></ul><br>
   <em>
     <p style="color:lemonchiffon;">B1: <b>develop detailed</b> design specifications, which <b>explain</b> the success criteria for the design of a solution based on the analysis of the research</p>
   </em>
@@ -708,6 +708,7 @@ Explore and analyze
   <hr>
 
   <h3>B2. Develop Design Ideas (Sketches + Concepts)</h3>
+  Suggested due date: <span data-date="B2date"></span></ul><br>
   <em>
     <p style="color:lemonchiffon;">B2: <b>develop a range</b> of feasible design ideas, using an appropriate medium(s) and
     <b>detailed annotation</b>, which can be <b>correctly</b> interpreted by others</p>
@@ -741,6 +742,7 @@ Explore and analyze
   <hr>
 
   <h3>B3–B4. Final Detailed Design Plan</h3>
+  Suggested due date: <span data-date="B3date"></span></ul><br>
   <em>
     <p style="color:lemonchiffon;">B3: <b>present</b> the chosen design and <b>justify fully and critically</b> its selection with
     <b>detailed</b> reference to the design specification<br>
@@ -815,6 +817,7 @@ Explore and analyze
   <hr>
 
   <h3>C1. Plan for Research & Development</h3>
+  Suggested due date: <span data-date="C1date"></span></ul><br>
   <em>
     C1: <b>construct a detailed and logical plan</b>, which <b>describes</b> the efficient
     use of time and resources, sufficient for peers to be able to follow to
@@ -864,6 +867,7 @@ Explore and analyze
   <hr>
 
   <h3>C2. Demonstrate Technical Skills</h3>
+  Suggested due date: <span data-date="C2date"></span></ul><br>
   <em>
     C2: <b>demonstrate excellent</b> technical skills when making the solution.
   </em>
@@ -884,6 +888,7 @@ Explore and analyze
   <hr>
 
   <h3>C3. Present Your Final Solution</h3>
+  Suggested due date: <span data-date="C3date"></span></ul><br>
   <em>
     C3: follows the plan to <b>create</b> the solution, which functions <b>as intended</b> and
     is presented <b>appropriately</b>
@@ -914,6 +919,7 @@ Explore and analyze
   <hr>
 
   <h3>C4. Justify Changes</h3>
+  Suggested due date: <span data-date="C4date"></span></ul><br>
   <em>
     C4: fully <b>justify</b> changes made to the chosen design and plan when making
     the solution.
