--- a/index.html
+++ b/index.html
@@ -364,16 +364,16 @@ body{
               </p>
               <h2 style="color: var(--err)">Estimated Time</h2>
               <h3>This are <i>suggested</i> due dates. Note the final due date above.</h3>
-               <b>Criterion A</b> - 5 classes<br>
+               <b>Criterion A</b> - ~5 classes<br>
                 <ul>A3: <span data-date="A3date"></span></ul>
                 <ul>A4: <span data-date="A4date"></span></ul>
             
-              <b>Criterion B</b> - 6 classes<br>
+              <b>Criterion B</b> - ~6 classes<br>
                 <ul>B1: <span data-date="B1date"></span></ul>
                 <ul>B2: <span data-date="B2date"></span></ul>
                 <ul>B3 &amp; B4: <span data-date="B3date"></span></ul>
             
-              <b>Criterion C</b> - 14 classes<br>
+              <b>Criterion C</b> - ~11 classes<br>
                 <ul>C1: <span data-date="C1date"></span></ul>
                 <ul>C2: <span data-date="C2date"></span></ul>
                 <ul>C3: <span data-date="C3date"></span></ul>
@@ -982,10 +982,10 @@ Explore and analyze
   var dueDates = {
     A3date: 'December 05',
     A4date: 'December 12',
-    B1date: 'January 13',
-    B2date: 'January 19',
-    B3date: 'January 23',
-    C1date: 'January 27',
+    B1date: 'January 20',
+    B2date: 'January 26',
+    B3date: 'January 30',
+    C1date: 'February 03',
     C2date: 'March 22',
     C3date: 'March 22',
     C4date: 'March 27',
