Add link to ChatBot for portfolio feedback

--- a/index.html
+++ b/index.html
@@ -539,6 +539,9 @@ body{
   <h5>
     Due Date: <span style="color: white;">One due date for the entire unit.</span><br>
     All strands due <span data-date="finalDueDate"></span>
+
+    Click <a href="https://drive.google.com/drive/folders/1Cz-kR9sVVHV1MdIvK4w44SMnhrF41imw" target="_blank" rel="noopener">
+    HERE</a> for a ChatBot which gives you formative feedback on your portfolio.
   </h5>
 
   <!-- A2 -->
