--- a/index.html
+++ b/index.html
@@ -662,6 +662,10 @@ Explore and analyze
   Due Date: <span style="color: white;">One due date for the entire unit.</span><br>
   All strands due <span data-date="finalDueDate"></span>
 </h5>
+  <h4>
+    Click <a href="https://gemini.google.com/gem/12ibXyxKyjLlCFF7U1kBRNKXlQAQpGQHT?usp=sharing" target="_blank" rel="noopener">
+    HERE</a> for a ChatBot which gives you formative feedback on your portfolio.
+  </h4>
 
   <!-- B1 -->
 
@@ -814,6 +818,10 @@ Explore and analyze
   Due Date: <span style="color: white;">One due date for the entire unit.</span><br>
   All strands due <span data-date="finalDueDate"></span>
 </h5>
+  <h4>
+    Click <a href="https://gemini.google.com/gem/12ibXyxKyjLlCFF7U1kBRNKXlQAQpGQHT?usp=sharing" target="_blank" rel="noopener">
+    HERE</a> for a ChatBot which gives you formative feedback on your portfolio.
+  </h4>
 
 
   <!-- C1 -->
