Add link to Feedback ChatBot in index.html

--- a/index.html
+++ b/index.html
@@ -392,6 +392,7 @@ body{
             <li><a href="https://app.flintk12.com/activities/digital-design--ab3fdb/sessions/new" target="_blank" rel="noopener">Flint AI</a></li>
             <li><a href="https://code.visualstudio.com/" target="_blank" rel="noopener">VS Code download</a></li>
             <li><a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing" target="_blank" rel="noopener">Portfolio Templates</a></li>
+            <li><a href="https://gemini.google.com/gem/12ibXyxKyjLlCFF7U1kBRNKXlQAQpGQHT?usp=sharing" target="_blank" rel="noopener">Feedback ChatBot</a></li>
           </ul>
         </div>
 
