Replace Flint AI references with AI Coding Coach

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ body{
             </ul>
           </details>
           <a href="#vocabulary">Vocabulary</a>
-          <a href="https://app.flintk12.com/activities/digital-design--ab3fdb/sessions/new" target="_blank" rel="noopener">Flint AI</a>
+          <a href="https://gemini.google.com/gem/1KKYlj_WXU0XOyK3eF3RZcTbbsyQ9-Srg?usp=sharing" target="_blank" rel="noopener">AI Coding Coach</a>
           <details>
             <summary>Academic Honesty</summary>
             <ul>
@@ -389,7 +389,7 @@ body{
           <strong>Quick Links:</strong>
           <ul>
             <li><strong><a href="https://docs.google.com/presentation/d/14cAviM0xdVDxOSQMRnEG8FMjnreaxVcr3jpThUfdboU/present?slide=id.g3a9f75382b0_0_0" target="_blank" rel="noopener">Daily Coding Exercises</a></strong></li>
-            <li><a href="https://app.flintk12.com/activities/digital-design--ab3fdb/sessions/new" target="_blank" rel="noopener">Flint AI</a></li>
+            <li><a href="https://gemini.google.com/gem/1KKYlj_WXU0XOyK3eF3RZcTbbsyQ9-Srg?usp=sharing" target="_blank" rel="noopener">AI Coding Coach</a></li>
             <li><a href="https://code.visualstudio.com/" target="_blank" rel="noopener">VS Code download</a></li>
             <li><a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing" target="_blank" rel="noopener">Portfolio Templates</a></li>
             <li><a href="https://gemini.google.com/gem/12ibXyxKyjLlCFF7U1kBRNKXlQAQpGQHT?usp=sharing" target="_blank" rel="noopener">Feedback ChatBot</a></li>
@@ -430,8 +430,8 @@ body{
               <tr>
                 <td style="padding:8px; vertical-align:top;"><strong>Role</strong></td>
                 <td style="padding:8px;">
-                  You are a <strong>digital designer and coder</strong> working with a partner and supported by
-                  <em>Flint AI</em>. Your role is to apply the design cycle to create a puzzle that is visually clear,
+                  You are a <strong>digital designer and coder</strong> working with a partner and supported by an
+                  <em>AI Coach</em>. Your role is to apply the design cycle to create a puzzle that is visually clear,
                   functional, and connected to the class narrative. You will research, prototype, code, test, and publish
                   your design like a professional developer.
                 </td>
@@ -526,10 +526,10 @@ body{
             </ul>
           </article>
 
-          <article id="flint">
-            <h3>Flint AI</h3>
+          <article id="coach">
+            <h3>AI Coding Coach</h3>
             <p class="muted">
-              This AI Chatbot is trained to be your coding guide for this unit. You are in charge. Good questions get good answers. Flint <i>will not</i> write code for you. You must be a problem solver.
+              This AI Chatbot is trained to be your coding guide for this unit. You are in charge. Good questions get good answers. Gemini <i>will not</i> write code for you. You must be a problem solver.
             </p>
           </article>
         </section>
@@ -618,7 +618,7 @@ Explore and analyze
 
     <li><strong>Your General Goal as a Designer</strong><br>
       Explain that you will learn and apply HTML, CSS, and JavaScript.<br>
-      Describe how you will work with Flint AI as a coding partner to develop skills and solve problems.<br>
+      Describe how you will work with Gemini AI as a coding partner to develop skills and solve problems.<br>
       State that you will eventually design and code one puzzle that contributes to the class escape room.
     </li>
 
@@ -864,7 +864,7 @@ Explore and analyze
       how to check input with JavaScript, how to show/hide elements, how to style buttons).<br>
       Briefly explain <strong>how you will learn</strong> these skills, such as:<br>
       – asking your teacher<br>
-      – using Flint AI<br>
+      – using Gemini AI<br>
       – checking approved tutorials<br>
       – experimenting with small test code
     </li>
@@ -886,7 +886,7 @@ Explore and analyze
   </em>
 
   <p><strong>Task:</strong><br>
-    Collaborate with your partner and with Flint AI to turn your design into a working coded product using HTML, CSS, and JavaScript. Focus on
+    Collaborate with your partner and with Gemini AI to turn your design into a working coded product using HTML, CSS, and JavaScript. Focus on
     writing clean, readable code and using your plan from C1 to guide your work.
   </p>
 
@@ -1076,7 +1076,7 @@ Explore and analyze
 
   function checkPuzzles(){
     var ok1 = clean(p1 && p1.value) === 'compassion';
-    var ok2 = clean(p2 && p2.value) === 'flint';
+    var ok2 = clean(p2 && p2.value) === 'coach';
 
     if (p1Status){
       p1Status.textContent = ok1 ? 'correct' : 'pending';
