--- a/index.html
+++ b/index.html
@@ -710,7 +710,8 @@ Explore and analyze
   </ul>
 
   <p><strong>Tip:</strong><br>
-    Write these as specific, testable statements, not vague ideas. For example:
+    KEEP IT SUPER SIMPLE!
+    <br>Write these as specific, testable statements, not vague ideas. For example:
     “The puzzle must include at least one interactive input the user must solve to proceed.”
   </p>
 
