--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/png" href="escape favicon.png">
   <title>Code 2 Escape — G9 Design (Escape → Unlock Unit)</title>
   <style>
     :root{
