Fix minor text formatting in index.html

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ body{
                 <td style="padding:8px; vertical-align:top;"><strong>Audience</strong></td>
                 <td style="padding:8px;">
                   Your audience is the entire ISL community and your product will be on display for ISL's annual
-                  <strong>Bits &amp; Bytes</strong> event in April. The experience you create should be easy to
+                  <strong>Bits &amp; Bytes</strong> in April. The experience you create should be easy to
                   understand, visually engaging, and challenging to solve.
                 </td>
               </tr>
@@ -615,8 +615,7 @@ Explore and analyze
       <a class="toc"
          href="https://docs.google.com/document/d/1pkCWhCbznf8grUXfpbIdRl7z142Zz7Y3gI99qHiWd6o/edit?tab=t.0"
          target="_blank" rel="noopener">
-        Bits & Bytes event
-      </a>.
+        Bits & Bytes event.</a>
     </li>
 
     <li><strong>Your General Goal as a Designer</strong><br>
