Fix formatting of teacher-provided specification
Removed unnecessary colon from specification text.

--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@ Explore and analyze
       What should players be able to understand easily?<br>
       How should your instructions or feedback appear?<br>
       <span style="color: var(--err);">
-        <b>Teacher-provided <u>required</u> specification:</b>
+        <b>Teacher-provided <u>required</u> specification</b> (paste this into your portfolio): 
       </span>
       "The puzzle must be solvable in 60 seconds or less, excluding any time spent reading the instructions or thinking/planning before starting."
     </li>
