--- a/index.html
+++ b/index.html
@@ -922,6 +922,8 @@ Explore and analyze
   <p><strong>In your portfolio, include:</strong></p>
   <ul>
     <li>
+      <strong>Link to your HTML practice webpage</strong><br>
+      This is the page you build slowly each day.
       <strong>Link to Your Final Web Page</strong><br>
       Provide the URL to your working puzzle (GitHub Pages).<br>
       Provide the URL to your <b>public</b> Github repository.
