Wrap em tags in paragraphs for clarity

--- a/index.html
+++ b/index.html
@@ -840,9 +840,9 @@ Explore and analyze
   <h3>C1. Plan for Research & Development</h3>
   Suggested due date: <span data-date="C1date"></span></ul><br>
   <em>
-    C1: <b>construct a detailed and logical plan</b>, which <b>describes</b> the efficient
+    <p style="color:lemonchiffon;">C1: <b>construct a detailed and logical plan</b>, which <b>describes</b> the efficient
     use of time and resources, sufficient for peers to be able to follow to
-    create the solution
+    create the solution</p>
   </em>
 
   <p><strong>Task:</strong><br>
@@ -890,7 +890,7 @@ Explore and analyze
   <h3>C2. Demonstrate Technical Skills</h3>
   Suggested due date: <span data-date="C2date"></span></ul><br>
   <em>
-    C2: <b>demonstrate excellent</b> technical skills when making the solution.
+    <p style="color:lemonchiffon;">C2: <b>demonstrate excellent</b> technical skills when making the solution.</p>
   </em>
 
   <p><strong>Task:</strong><br>
@@ -911,8 +911,8 @@ Explore and analyze
   <h3>C3. Present Your Final Solution</h3>
   Suggested due date: <span data-date="C3date"></span></ul><br>
   <em>
-    C3: follows the plan to <b>create</b> the solution, which functions <b>as intended</b> and
-    is presented <b>appropriately</b>
+    <p style="color:lemonchiffon;">C3: follows the plan to <b>create</b> the solution, which functions <b>as intended</b> and
+    is presented <b>appropriately</b></p>
   </em>
 
   <p><strong>Task:</strong><br>
@@ -944,8 +944,8 @@ Explore and analyze
   <h3>C4. Justify Changes</h3>
   Suggested due date: <span data-date="C4date"></span></ul><br>
   <em>
-    C4: fully <b>justify</b> changes made to the chosen design and plan when making
-    the solution.
+    <p style="color:lemonchiffon;">C4: fully <b>justify</b> changes made to the chosen design and plan when making
+    the solution.</p>
   </em>
 
   <p><strong>Task:</strong><br>
