--- a/index.html
+++ b/index.html
@@ -717,7 +717,8 @@ Explore and analyze
   <p><strong>Tip:</strong><br>
     KEEP IT SUPER SIMPLE!
     <br>Write these as specific, testable statements, not vague ideas. For example:
-    “The puzzle must include at least one interactive input the user must solve to proceed.”
+    “The puzzle must include at least one interactive input the user must solve to proceed.”<br>
+    There are other required specifications in the GRASP table, can you find them?
   </p>
 
   <!-- B2 -->
