--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@ body{
               <li><strong>Console</strong> — JS messages window. Example: <code>console.log('check');</code></li>
               <li><strong>Link</strong> — Clickable navigation, e.g., <code>&lt;a href="#/a"&gt;Criterion A&lt;/a&gt;</code></li>
               <li><strong>Image</strong> — <code>&lt;img src="..." alt="..." /&gt;</code> for pictures (PNG/JPG/SVG).</li>
-              <li><strong>Vanilla JavaScript</strong> — <code>&lt;Simple JavaScript without the aid of external Libraries or Frameworks.</li>
+              <li><strong>Vanilla JavaScript</strong> — Simple JavaScript without the aid of external Libraries or Frameworks.</li>
 
             </ul>
           </article>
