Reformat tip section into a list

--- a/index.html
+++ b/index.html
@@ -715,10 +715,12 @@ Explore and analyze
   </ul>
 
   <p><strong>Tip:</strong><br>
-    KEEP IT SUPER SIMPLE!
-    <br>Write these as specific, testable statements, not vague ideas. For example:
-    “The puzzle must include at least one interactive input the user must solve to proceed.”<br>
-    There are other required specifications in the GRASP table, can you find them?
+    <ul>
+      <li>KEEP IT SUPER SIMPLE!
+        <br>Write these as specific, testable statements, not vague ideas. For example:
+        “The puzzle must include at least one interactive input the user must solve to proceed.”</li>
+        <li>There are other required specifications in the GRASP table, can you find them?</li>
+      </ul>
   </p>
 
   <!-- B2 -->
