Emphasize detailed instructions for Criterion B and C

--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@ Explore and analyze
 <hr>
 <h2>Need more help with Criterion B?</h2>
   <div class="toc" style="margin:10px 0 18px 0">
-<a href="https://drive.google.com/drive/folders/1aJDwrjx16B0YfD_uxdStE631LfJtXool?usp=drive_link" target="_blank" rel="noopener">Here are detailed instructions and students examples for Criterion B.</a><br><br>
+<a href="https://drive.google.com/drive/folders/1aJDwrjx16B0YfD_uxdStE631LfJtXool?usp=drive_link" target="_blank" rel="noopener">Here are <b>detailed instructions and students examples</b> for Criterion B.</a><br><br>
   </div>
     <hr>
 
@@ -968,7 +968,7 @@ Explore and analyze
 <hr>
 <h2>Need more help with Criterion C?</h2>
   <div class="toc" style="margin:10px 0 18px 0">
-<a href="https://drive.google.com/drive/folders/1KMGdUwnXwjeCVZdDq4pjkfdbnnO6jauw" target="_blank" rel="noopener">Here are detailed instructions and students examples for Criterion C.</a><br><br>
+<a href="https://drive.google.com/drive/folders/1KMGdUwnXwjeCVZdDq4pjkfdbnnO6jauw" target="_blank" rel="noopener">Here are <b>detailed instructions and students examples</b> for Criterion C.</a><br><br>
   </div>
     <hr>
 
