Update narrative references in index.html

--- a/index.html
+++ b/index.html
@@ -433,7 +433,12 @@ body{
                 <td style="padding:8px;">
                   You are a <strong>digital designer and coder</strong> working with a partner and supported by an
                   <em>AI Coach</em>. Your role is to apply the design cycle to create a puzzle that is visually clear,
-                  functional, and connected to the class narrative. You will research, prototype, code, test, and publish
+                  functional, and connected to the
+                  <a class="toc"
+         href="https://docs.google.com/document/d/106rByQLSV7jIWoMztV616A57EC3M0A2o_UFxZfxF9cM/edit?usp=sharing"
+         target="_blank" rel="noopener">
+        class narrative</a>.
+                   You will research, prototype, code, test, and publish
                   your design like a professional developer.
                 </td>
               </tr>
@@ -710,7 +715,11 @@ Explore and analyze
     </li>
     <li><strong>Story and theme requirements</strong><br>
       What is the opening and closing script that was assigned to you?<br>
-      How will your puzzle fit the ISL Apocalypse narrative?<br>
+      How will your puzzle fit the 
+                          <a class="toc"
+         href="https://docs.google.com/document/d/106rByQLSV7jIWoMztV616A57EC3M0A2o_UFxZfxF9cM/edit?usp=sharing"
+         target="_blank" rel="noopener">
+        ISL Apocalypse narrative</a><br>
     </li>
   </ul>
 
