--- a/index.html
+++ b/index.html
@@ -354,7 +354,13 @@ body{
               Teachers and younger students are somewhere inside the building, 
               safe but unable to navigate the new maze of locked rooms, coded panels, and hidden clues.<br><br>
               A strange energy source appears to be pulsing from the center of the school — not harmful, but powerful — 
-              as if the building itself is running a massive puzzle that needs to be solved to reset everything back to normal.
+              as if the building itself is running a massive puzzle that needs to be solved to reset everything back to normal.<br><br>
+
+              Click                           <a class="toc"
+         href="https://docs.google.com/document/d/106rByQLSV7jIWoMztV616A57EC3M0A2o_UFxZfxF9cM/edit?usp=sharing"
+         target="_blank" rel="noopener">
+        HERE</a>
+               for the full narrative.
             </div>
           </div>
           <div class="card">
