--- a/index.html
+++ b/index.html
@@ -756,6 +756,7 @@ Explore and analyze
 
   <p><strong>In your portfolio, include:</strong></p>
   <ul>
+    <li><strong>The ISL Apocalypse narrative you and your partner were assigned</strong><br>
     <li><strong>At least 3 sketches or mockups</strong><br>
       These can be drawn by hand or digitally.<br>
       These can be rough and do not have to be clean and detailed, but they should clearly communicate your ideas.<br>
