--- a/index.html
+++ b/index.html
@@ -751,7 +751,9 @@ Explore and analyze
 
   <p><strong>Task:</strong><br>
     Generate several different ideas for your puzzle’s layout, theme, and interactive style —
-    even though you haven’t finalized the puzzle logic yet.
+    even though you haven’t finalized the puzzle logic yet.<br>
+    <i>Note: this is where you start really collaborating with your partner -- but the writing in portfolio must be
+    YOUR OWN WORK.</i>
   </p>
 
   <p><strong>In your portfolio, include:</strong></p>
