--- a/index.html
+++ b/index.html
@@ -762,12 +762,14 @@ Explore and analyze
     <li><strong>At least 3 sketches or mockups</strong><br>
       These can be drawn by hand or digitally.<br>
       These can be rough and do not have to be clean and detailed, but they should clearly communicate your ideas.<br>
-      Show possible layouts (buttons, boxes, text areas, images, clues, etc.).
+      Show possible layouts (buttons, boxes, text areas, images, clues, etc.).<br>
+      These ideas must derive logically from your design specifications.
     </li>
     <li><strong>A short description under each idea</strong><br>
       What is the basic concept of this idea?<br>
       How might it creatively expand on the ISL Apocalypse story?<br>
-      How might a user interact with the page?
+      How might a user interact with the page?<br>
+      These ideas must derive logically from your design specifications.
     </li>
   </ul>
 
