--- a/index.html
+++ b/index.html
@@ -763,13 +763,13 @@ Explore and analyze
       These can be drawn by hand or digitally.<br>
       These can be rough and do not have to be clean and detailed, but they should clearly communicate your ideas.<br>
       Show possible layouts (buttons, boxes, text areas, images, clues, etc.).<br>
-      These ideas must derive logically from your design specifications.
+      <i>These ideas must derive logically from your design specifications.</i>
     </li>
     <li><strong>A short description under each idea</strong><br>
       What is the basic concept of this idea?<br>
       How might it creatively expand on the ISL Apocalypse story?<br>
       How might a user interact with the page?<br>
-      These ideas must derive logically from your design specifications.
+      <i>These ideas must derive logically from your design specifications.</i>
     </li>
   </ul>
 
