Update description for collaboration plan section

--- a/index.html
+++ b/index.html
@@ -642,7 +642,10 @@ Explore and analyze
 
     <li><strong>Collaboration Plan</strong><br>
       Explain how you will work with your partner (roles, communication, shared responsibilities).<br>
-      Describe how your work will connect with the whole class to create one linked escape room experience.
+      Describe how your work will connect with the                                 <a class="toc"
+         href="https://docs.google.com/document/d/106rByQLSV7jIWoMztV616A57EC3M0A2o_UFxZfxF9cM/edit?usp=sharing"
+         target="_blank" rel="noopener">
+        whole class narrative</a> to create one linked escape room experience.
     </li>
 
     <li><strong>Constraints and Considerations</strong><br>
