Add class 'toc' to links for ChatBot feedback

--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@ body{
     All strands due <span data-date="finalDueDate"></span>
   </h5>
 <h4>
-    Click <a href="https://gemini.google.com/gem/12ibXyxKyjLlCFF7U1kBRNKXlQAQpGQHT?usp=sharing" target="_blank" rel="noopener">
+    Click <a class="toc" href="https://gemini.google.com/gem/12ibXyxKyjLlCFF7U1kBRNKXlQAQpGQHT?usp=sharing" target="_blank" rel="noopener">
     HERE</a> for a ChatBot which gives you formative feedback on your portfolio.
   </h4>
 
@@ -685,7 +685,7 @@ Explore and analyze
   All strands due <span data-date="finalDueDate"></span>
 </h5>
   <h4>
-    Click <a href="https://gemini.google.com/gem/12ibXyxKyjLlCFF7U1kBRNKXlQAQpGQHT?usp=sharing" target="_blank" rel="noopener">
+    Click <a class="toc" href="https://gemini.google.com/gem/12ibXyxKyjLlCFF7U1kBRNKXlQAQpGQHT?usp=sharing" target="_blank" rel="noopener">
     HERE</a> for a ChatBot which gives you formative feedback on your portfolio.
   </h4>
 
@@ -854,7 +854,7 @@ Explore and analyze
   All strands due <span data-date="finalDueDate"></span>
 </h5>
   <h4>
-    Click <a href="https://gemini.google.com/gem/12ibXyxKyjLlCFF7U1kBRNKXlQAQpGQHT?usp=sharing" target="_blank" rel="noopener">
+    Click <a class="toc" href="https://gemini.google.com/gem/12ibXyxKyjLlCFF7U1kBRNKXlQAQpGQHT?usp=sharing" target="_blank" rel="noopener">
     HERE</a> for a ChatBot which gives you formative feedback on your portfolio.
   </h4>
 
