--- a/index.html
+++ b/index.html
@@ -561,8 +561,8 @@ body{
     All strands due <span data-date="finalDueDate"></span>
   </h5>
 <h4>
-    Click <a class="toc" href="https://gemini.google.com/gem/12ibXyxKyjLlCFF7U1kBRNKXlQAQpGQHT?usp=sharing" target="_blank" rel="noopener">
-    HERE</a> for a ChatBot which gives you formative feedback on your portfolio.
+  Click <a class="toc" href="https://gemini.google.com/gem/12ibXyxKyjLlCFF7U1kBRNKXlQAQpGQHT?usp=sharing" target="_blank" rel="noopener">
+    HERE</a> for a <span color=accent">ChatBot</span> which gives you formative feedback on your portfolio.
   </h4>
 
   <!-- A2 -->
@@ -686,7 +686,7 @@ Explore and analyze
 </h5>
   <h4>
     Click <a class="toc" href="https://gemini.google.com/gem/12ibXyxKyjLlCFF7U1kBRNKXlQAQpGQHT?usp=sharing" target="_blank" rel="noopener">
-    HERE</a> for a ChatBot which gives you formative feedback on your portfolio.
+    HERE</a> for a <span color=accent">ChatBot</span> which gives you formative feedback on your portfolio.
   </h4>
 
   <!-- B1 -->
@@ -855,7 +855,7 @@ Explore and analyze
 </h5>
   <h4>
     Click <a class="toc" href="https://gemini.google.com/gem/12ibXyxKyjLlCFF7U1kBRNKXlQAQpGQHT?usp=sharing" target="_blank" rel="noopener">
-    HERE</a> for a ChatBot which gives you formative feedback on your portfolio.
+    HERE</a> for a <span color=accent">ChatBot</span> which gives you formative feedback on your portfolio.
   </h4>
 
 
