Clarify puzzle age appropriateness in index.html
Updated content to specify age appropriateness for the puzzle.

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@ body{
          target="_blank" rel="noopener">
         Bits & Bytes</a>
                   </strong> event in April. The experience you create should be easy to
-                  understand, visually engaging, and challenging to solve.
+                  understand, visually engaging, and challenging to solve. The puzzle itself must be appropriate for grades 6 and above, but the <b>content</b> must be appropriate for all ages.
                 </td>
               </tr>
               <tr>
