Add image of B2 example to index.html

--- a/index.html
+++ b/index.html
@@ -780,6 +780,9 @@ Explore and analyze
     Focus on exploring possibilities, not perfect accuracy. This is creative thinking time.
   </p>
 
+  <!-- add image of B2 example here -->
+<img src="b2example.jpg" alt="b2 example" width="500" height="333">
+
   <!-- B3 & B4 -->
 
   <hr>
