--- a/index.html
+++ b/index.html
@@ -781,6 +781,8 @@ Explore and analyze
   </p>
 
   <!-- add image of B2 example here -->
+  <p><strong>Student example:</strong><br>
+    Notice that it looks like a <b>storyboard</b> with numbers of each frame.<br>
 <img src="b2example.jpg" alt="b2 example" width="500" height="333">
 
   <!-- B3 & B4 -->
