--- a/index.html
+++ b/index.html
@@ -782,8 +782,8 @@ Explore and analyze
 
   <!-- add image of B2 example here -->
   <p><strong>Student example:</strong><br>
-    Notice that it looks like a <b>storyboard</b> with numbers of each frame.<br>
-<img src="b2example.jpg" alt="b2 example" width="500" height="333">
+    Notice that it looks like a <b>storyboard</b> with numbers of each frame.<br><br>
+<img src="b2example.jpg" alt="b2 example" width="750" height="498">
 
   <!-- B3 & B4 -->
 
