--- a/index.html
+++ b/index.html
@@ -400,6 +400,7 @@ body{
             <li><a href="https://code.visualstudio.com/" target="_blank" rel="noopener">VS Code download</a></li>
             <li><a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing" target="_blank" rel="noopener">Portfolio Templates</a></li>
             <li><a href="https://gemini.google.com/gem/12ibXyxKyjLlCFF7U1kBRNKXlQAQpGQHT?usp=sharing" target="_blank" rel="noopener">Feedback ChatBot</a></li>
+            <li><a href="https://drive.google.com/drive/folders/1CMtfWd0kRdW4hy1_82mYGh0q_JQNgOfc?usp=sharing" target="_blank" rel="noopener">ISL Campus Photos</a></li>
           </ul>
         </div>
 
