Update links in index.html for narrative and resources

--- a/index.html
+++ b/index.html
@@ -356,7 +356,8 @@ body{
               A strange energy source appears to be pulsing from the center of the school — not harmful, but powerful — 
               as if the building itself is running a massive puzzle that needs to be solved to reset everything back to normal.<br><br>
 
-              Click                           <a class="toc"
+              Click
+              <a class="toc"
          href="https://docs.google.com/document/d/106rByQLSV7jIWoMztV616A57EC3M0A2o_UFxZfxF9cM/edit?usp=sharing"
          target="_blank" rel="noopener">
         HERE</a>
@@ -396,6 +397,7 @@ body{
           <strong>Quick Links:</strong>
           <ul>
             <li><strong><a href="https://docs.google.com/presentation/d/14cAviM0xdVDxOSQMRnEG8FMjnreaxVcr3jpThUfdboU/present?slide=id.g3a9f75382b0_0_0" target="_blank" rel="noopener">Daily Coding Exercises</a></strong></li>
+            <li><a href="https://docs.google.com/document/d/106rByQLSV7jIWoMztV616A57EC3M0A2o_UFxZfxF9cM/edit?usp=sharing"target="_blank" rel="noopener">ISL Apocalypse Story</a></li>
             <li><a href="https://gemini.google.com/gem/1KKYlj_WXU0XOyK3eF3RZcTbbsyQ9-Srg?usp=sharing" target="_blank" rel="noopener">AI Coding Coach</a></li>
             <li><a href="https://code.visualstudio.com/" target="_blank" rel="noopener">VS Code download</a></li>
             <li><a href="https://drive.google.com/drive/folders/1AWpKgeKhDConvmSkHzbefNHYWtPSeAJg?usp=sharing" target="_blank" rel="noopener">Portfolio Templates</a></li>
