--- a/index.html
+++ b/index.html
@@ -786,7 +786,8 @@ Explore and analyze
   <!-- add image of B2 example here -->
   <p><strong>Student example:</strong><br>
     This is a MEDIUM LEVEL example -- it is missing details. Notice that it looks like a <b>storyboard</b> with numbers of each frame.<br><br>
-<img src="b2example.jpg" alt="b2 example" width="750" height="498">
+<img src="b2example1.jpg" alt="b2 example" width="750" height="498"><br>
+<img src="b2example2.jpg" alt="b2 example" width="750" height="498">
 
   <!-- B3 & B4 -->
 
