--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@ Explore and analyze
 
   <!-- add image of B2 example here -->
   <p><strong>Student example:</strong><br>
-    This is a MEDIUM LEVEL example -- it is missing details. Notice that it looks like a <b>storyboard</b> with numbers of each frame.<br><br>
+    This is a HIGH LEVEL example with details. The idea is SIMPLE and communicated clearly.<br><br>
 <img src="b2example1.jpg" alt="b2 example" width="750"><br>
 <img src="b2example2.jpg" alt="b2 example" width="750">
 
