--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ body{
          href="https://docs.google.com/document/d/1pkCWhCbznf8grUXfpbIdRl7z142Zz7Y3gI99qHiWd6o/edit?tab=t.0"
          target="_blank" rel="noopener">
         Bits & Bytes</a>
-                  </strong> event in April. The experience you create should be easy to
+                  </strong> event March 23-27. The experience you create should be easy to
                   understand, visually engaging, and challenging to solve. The puzzle itself must be appropriate for grades 6 and above, but the <b>content</b> must be appropriate for all ages.
                 </td>
               </tr>
@@ -813,7 +813,11 @@ Explore and analyze
       Create a detailed sketch or mockup of your final puzzle design.<br>
       Label key elements, such as:
       buttons, inputs/text boxes, images or icons, clue areas, and messages or feedback space.<br>
-      Your annotations should explain what each element does or why it’s there.<br><br>
+      Your annotations should explain what each element does or why it’s there.<br>
+      Include specific typeface(s) for text and colors for various elements as 
+                                <a class="toc"
+         href="https://htmlcolorcodes.com/"
+         target="_blank" rel="noopener">hex codes.</a><br><br>
     </li>
 
     <li><strong>2. Interactive Flow Summary</strong><br>
