--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,9 @@
                   Label key elements, such as:
                   buttons, inputs/text boxes, images or icons, clue areas, and messages or feedback space.<br>
                   Your annotations should explain what each element does or why it’s there.<br>
-                  Include specific typeface(s) for text and colors for various elements as
+                  Include specific 
+                  <a class="toc" href="https://www.networksolutions.com/blog/html-font-styles/" target="_blank" rel="noopener">typeface(s)</a>
+                  for text and colors for various elements as
                   <a class="toc" href="https://htmlcolorcodes.com/" target="_blank" rel="noopener">hex
                     codes.</a><br><br>
                 </li>
