--- a/index.html
+++ b/index.html
@@ -632,8 +632,7 @@
 
           <article id="resources">
             <h3>Starter Code &amp; Resources</h3>
-            <ul style="margin-left: 20px;">
-              <span class="toc" style="margin-left:6px;">
+              <ul class="toc" style="margin-left:20px;">
                 <li><strong>Starter templates:</strong><br>
                   <a href="https://leeshawverisl.github.io/code2escape_project_template_basic/" id="starterLink"
                     target="_blank" rel="noopener">Basic Template Example Page</a>
@@ -946,7 +945,7 @@
           <p><strong>In your portfolio, include:</strong></p>
           <ul>
             <li><strong>The ISL Apocalypse narrative you and your partner were assigned</strong><br>
-            <li><strong> <span color: var(--warn)>At least 3</span> sketches or mockups</strong><br>
+            <li><strong> <span style="color: var(--warn);">At least 3</span> sketches or mockups</strong><br>
               These can be drawn by hand or digitally.<br>
               These can be rough and do not have to be clean and detailed, but they should clearly communicate your
               ideas.<br>
@@ -967,14 +966,10 @@
 
           <!-- add image of B2 example here -->
           <p><strong>Student example:</strong><br>
-            <<<<<<< HEAD This is a MEDIUM LEVEL example -- it is missing some details. Notice that it looks like a <b>
-              storyboard</b> with numbers of each frame.<br><br>
-              <img src="b2example.jpg" alt="b2 example" width="750" height="498">
-              =======
-              This is a HIGH LEVEL example with details. The idea is SIMPLE and communicated clearly.<br><br>
-              <img src="b2example1.jpg" alt="b2 example" width="750"><br>
-              <img src="b2example2.jpg" alt="b2 example" width="750">
-              >>>>>>> 01d9d3049d7bc8ae0db5a09e77a38b2cf7710bcb
+            This is a HIGH LEVEL example with details. The idea is SIMPLE and communicated clearly.<br><br>
+            <img src="b2example1.jpg" alt="B2 example 1" width="750"><br>
+            <img src="b2example2.jpg" alt="B2 example 2" width="750">
+          </p>
 
               <!-- B3 & B4 -->
 
@@ -1064,7 +1059,7 @@
           <h4>
             Click <a class="toc" href="https://gemini.google.com/gem/12ibXyxKyjLlCFF7U1kBRNKXlQAQpGQHT?usp=sharing"
               target="_blank" rel="noopener">
-              HERE</a> for a <span color=accent">ChatBot</span> which gives you formative feedback on your portfolio.
+              HERE</a> for a <span style="color: var(--accent);">ChatBot</span> which gives you formative feedback on your portfolio.
           </h4>
 
 
