--- a/index.html
+++ b/index.html
@@ -775,6 +775,10 @@
             (HTML/CSS/JavaScript). You’re not just describing — you’re analyzing why those design
             choices are effective.
           </p>
+          <br>
+          <a class="toc" href="https://docs.google.com/presentation/d/12D6V5sHCbEz82xHRTN2oR8KU9SzSv9xDaDaW0YIsmRY/edit?slide=id.g3a9f7189897_0_529#slide=id.g3a9f7189897_0_529"
+              target="_blank" rel="noopener">
+              This is the slideshow we used to collect our examples.</a>
 
           <!-- A4 -->
 
